--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     //login //register
     <string name="login">Masuk</string>
     <string name="policy">By signing in your are agreeing our Term and Privacy policy</string>
-    <string name="masuk">Login</string>
+    <string name="masuk">Hello !!</string>
     <string name="daftar">Daftar</string>
     <string name="lupa_password">Lupa password?</string>
     <string name="signup">Daftar</string>
@@ -28,7 +28,7 @@
     <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
     <string name="confidence_score">Confidence Score</string>
     <string name="prediction">Prediction</string>
-    <string name="text_reset">Silahkan masukkan email yang digunakan pada akun anda untuk melakukan reset password</string>
+    <string name="text_reset">Please Enter Your Email Address To Recieve a Verification Cord</string>
     <string name="empty_text_warning">Silahkan masukkan text terlebih dahulu</string>
 
     //publish//Youtobe
@@ -40,15 +40,15 @@
 
     //onboarding
     //headlings
-    <string name="heading_one">Quick &amp; Easy Payments</string>
-    <string name="heading_two">Instant Notifications</string>
-    <string name="heading_three">Cashless Payment</string>
+    <string name="heading_one">Welcome to Recrafity</string>
+    <string name="heading_two">Scan Your Waste</string>
+    <string name="heading_three">Transform Waste into Art</string>
     <string name="heading_fourth">Pay Anywhere</string>
 
     //Description
-    <string name="desc_one">Grow your Bussiness By Accepting Card Payments with The New Card Reader</string>
-    <string name="desc_two">Lorem ipsum dolar sit amet, consectetur adpiscing elit, sed do eiudmod tempor incididunt ut labore</string>
-    <string name="desc_three">Lorem ipsum dolar sit amet, consectetur adpiscing elit, sed do eiudmod tempor incididunt ut labore</string>
+    <string name="desc_one">Join the Go Green movement! Discover creative ways to recycle waste and transform it into amazing handmade crafts.</string>
+    <string name="desc_two">Identify the type of waste instantly with our scan feature. We\'ll provide creative ideas to recycle it into art.</string>
+    <string name="desc_three">Find inspiration and step-by-step guides to create various handmade products from your waste. From home decor to unique accessories.</string>
     <string name="desc_fourth">Lorem ipsum dolar sit amet, consectetur adpiscing elit, sed do eiudmod tempor incididunt ut labore</string>
 
 
@@ -66,4 +66,5 @@
     <string name="upload_failed">Upload gagal</string>
     <string name="upload_success">Upload berhasil</string>
     <string name="text_home">Do you feel the temperature HOTTER than last Year ?</string>
+    <string name="new_password_textView">Your New Password Must Be Differnt From Previously Used Password</string>
 </resources>
