--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,14 @@
 <resources>
     <string name="app_name">ReCratify</string>
     <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_dashboard">Suggestion</string>
+    <string name="title_notifications">Explore</string>
     <string name="profil">Profil</string>
 
 
     //login //register
     <string name="login">Masuk</string>
-    <string name="policy">By signing in your are agreeing our Term and Privacy policy</string>
+    <string name="policy">ReCratify</string>
     <string name="masuk">Hello !!</string>
     <string name="daftar">Daftar</string>
     <string name="lupa_password">Lupa password?</string>
